<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_10"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="92dp"
        android:text="@string/ocean_tale_or_deep_truth"
        android:textColor="#E4E4E9"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="145dp"
        android:fontFamily="serif"
        android:text="@string/dive_into_sea_world_knowledge"
        android:textColor="#FAF4F4"
        android:textColorHint="#1B73BA"
        android:textColorLink="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="303dp"
        android:text="@string/begin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="108dp"
        android:layout_marginStart="395dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/app_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_2"
        tools:ignore="UnknownId,ImageContrastCheck,VisualLintBounds" />
</androidx.constraintlayout.widget.ConstraintLayout>